Atualizado, feito correcoes no codigo, implentado documentos via openapi e swagger.